--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -23,6 +23,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the baby is coming\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"the baby is coming\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
