--- a/Untitled-1.ipynb
+++ b/Untitled-1.ipynb
@@ -40,6 +40,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "baby Penny is here\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"baby Penny is here\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
