--- a/CS101-ManagingDataExcercise-I.ipynb
+++ b/CS101-ManagingDataExcercise-I.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "2d718941",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,13 @@
     "import mysql.connector as sq\n",
     "\n",
     "#your code here\n",
+    "mydb = mysql.connector.connect(\n",
+    "    host=\"localhost\",\n",
+    "    user=\"root\",\n",
+    "    password=\"idp/dt=[H,p]\"\n",
+    ")\n",
     "\n",
+    "mycursor = mydb.cursor()\n",
     "\n"
    ]
   },
@@ -96,12 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eac19e33",
    "metadata": {},
    "outputs": [],
    "source": [
     "#your code here\n",
+    "mycursor.execute(\"DROP DATABASE IF EXISTS nj_state_teachers_salaries\")\n",
+    "mycursor.execute(\"CREATE DATABASE nj_state_teachers_salaries\")\n",
     "\n",
     "\n",
     "\n",
