--- a/CS101-ManagingDataExcercise-I.ipynb
+++ b/CS101-ManagingDataExcercise-I.ipynb
@@ -350,9 +350,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -364,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
