--- a/FordAlex_pset3.ipynb
+++ b/FordAlex_pset3.ipynb
@@ -68,7 +68,6 @@
     "#import libraries\n",
     "import mysql.connector as sq\n",
     "\n",
-    "#your code here\n",
     "mydb = sq.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
@@ -111,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
+    "\n",
     "mycursor.execute(\"DROP DATABASE IF EXISTS nj_state_teachers_salaries\")\n",
     "mycursor.execute(\"CREATE DATABASE nj_state_teachers_salaries\")\n",
     "\n",
@@ -145,6 +144,7 @@
     "\n",
     "mycursor.execute(\"USE nj_state_teachers_salaries\")  \n",
     "\n",
+    "#defining the table\n",
     "create_table = \"\"\"\n",
     "CREATE TABLE teachers_salaries (\n",
     "    county VARCHAR(255),\n",
@@ -189,10 +189,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
+    "\n",
     "mycursor.execute(\"SET GLOBAL local_infile = 1\")\n",
     "mydb.commit()\n",
     "\n",
+    "#defining the data\n",
     "load_data = \"\"\"\n",
     "LOAD DATA LOCAL INFILE 'nj_teachers_salaries_pset3.csv'\n",
     "INTO TABLE teachers_salaries\n",
