--- a/FordAlex_pset3.ipynb
+++ b/FordAlex_pset3.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2d718941",
    "metadata": {
     "jupyter": {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "eac19e33",
    "metadata": {},
    "outputs": [],
@@ -147,16 +147,22 @@
     "#defining the table\n",
     "create_table = \"\"\"\n",
     "CREATE TABLE teachers_salaries (\n",
+    "    id VARCHAR(255),\n",
+    "    last_name VARCHAR(255),\n",
+    "    first_name VARCHAR(255),\n",
     "    county VARCHAR(255),\n",
-    "    district_name VARCHAR(255),\n",
-    "    school_name VARCHAR(255),\n",
-    "    teacher_first_name VARCHAR(255),\n",
-    "    teacher_last_name VARCHAR(255),\n",
-    "    position VARCHAR(255),\n",
+    "    district VARCHAR(255),\n",
+    "    school VARCHAR(255),\n",
+    "    primary_job VARCHAR(255),\n",
+    "    fte VARCHAR(255),\n",
     "    salary VARCHAR(255),\n",
-    "    degree VARCHAR(255),\n",
-    "    years_of_experience VARCHAR(255),\n",
-    "    comments VARCHAR(255)\n",
+    "    certificate VARCHAR(255),\n",
+    "    subcategory VARCHAR(255),\n",
+    "    teaching_route VARCHAR(255),\n",
+    "    highly_qualified VARCHAR(255),\n",
+    "    experience_district VARCHAR(255),\n",
+    "    experience_nj VARCHAR(255),\n",
+    "    experience_total VARCHAR(255)\n",
     ")\n",
     "\"\"\"\n",
     "mycursor.execute(create_table)\n",
@@ -201,16 +207,22 @@
     "OPTIONALLY ENCLOSED BY '\"'\n",
     "ESCAPED BY '\\\\\\\\'\n",
     "IGNORE 1 LINES\n",
-    "(county,\n",
-    " district_name,\n",
-    " school_name,\n",
-    " teacher_first_name,\n",
-    " teacher_last_name,\n",
-    " position,\n",
-    " salary,\n",
-    " degree,\n",
-    " years_of_experience,\n",
-    " comments\n",
+    "(id,\n",
+    "last_name,\n",
+    "first_name,\n",
+    "county,\n",
+    "district,\n",
+    "school,\n",
+    "primary_job,\n",
+    "fte,\n",
+    "salary,\n",
+    "certificate,\n",
+    "subcategory,\n",
+    "teaching_route,\n",
+    "highly_qualified,\n",
+    "experience_district,\n",
+    "experience_nj,\n",
+    "experience_total\n",
     ")\n",
     "\"\"\"\n",
     "mycursor.execute(load_data)\n",
