--- a/CS101-ManagingDataExcercise-I.ipynb
+++ b/CS101-ManagingDataExcercise-I.ipynb
@@ -68,7 +68,7 @@
     "#import libraries\n",
     "import mysql.connector as sq\n",
     "\n",
-    "#your code here\n",
+    "\n",
     "mydb = sq.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
@@ -365,9 +365,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -379,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
