--- a/CS101-ManagingDataExcercise-I.ipynb
+++ b/CS101-ManagingDataExcercise-I.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2d718941",
    "metadata": {
     "jupyter": {
@@ -68,7 +68,7 @@
     "#import libraries\n",
     "import mysql.connector as sq\n",
     "\n",
-    "\n",
+    "#connect to the database\n",
     "mydb = sq.connect(\n",
     "    host=\"localhost\",\n",
     "    user=\"root\",\n",
@@ -106,12 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "eac19e33",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
+    "#drop the database if it exists and create a new one\n",
     "mycursor.execute(\"DROP DATABASE IF EXISTS nj_state_teachers_salaries\")\n",
     "mycursor.execute(\"CREATE DATABASE nj_state_teachers_salaries\")\n",
     "\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "cd63411d",
    "metadata": {},
    "outputs": [],
@@ -190,21 +190,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "id": "8cdaafc8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
+    "\n",
     "mycursor.execute(\"SET GLOBAL local_infile = 1\")\n",
     "mydb.commit()\n",
     "\n",
     "load_data = \"\"\"\n",
     "LOAD DATA LOCAL INFILE 'nj_teachers_salaries_pset3.csv'\n",
     "INTO TABLE teachers_salaries\n",
-    "FIELDS TERMINATED BY ','\n",
-    "OPTIONALLY ENCLOSED BY '\"'\n",
-    "ESCAPED BY '\\\\\\\\'\n",
     "IGNORE 1 LINES\n",
     "(id,\n",
     "last_name,\n",
@@ -251,12 +248,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "07007e3e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows in teachers_salaries table : 100003\n"
+     ]
+    }
+   ],
    "source": [
     "cmd = \"select count(*) from \\\n",
     "                 nj_state_teachers_salaries.teachers_salaries\"\n",
@@ -278,10 +283,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "8b95bbcf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of columns in teachers_salaries table : 16\n"
+     ]
+    }
+   ],
    "source": [
     "cmd = \"\"\"SELECT COUNT(*) \\\n",
     "                FROM INFORMATION_SCHEMA.COLUMNS \\\n",
@@ -365,7 +378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -379,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
