--- a/pset4/PSET-4 - Managing Data Excercise 2.ipynb
+++ b/pset4/PSET-4 - Managing Data Excercise 2.ipynb
@@ -1875,17 +1875,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here\n",
-    "\n"
+    "df_sample = pd.read_csv(\"sample.csv\")\n",
+    "\n",
+    "print(\"FIRST 5 ROWS:\")\n",
+    "display(df_sample.head())\n",
+    "\n",
+    "print(\"\\nLAST 5 ROWS:\")\n",
+    "display(df_sample.tail())\n",
+    "\n",
+    "\n",
+    "print(\"DataFrame shape (rows, columns):\", df_sample.shape)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9f6892e-a68e-4044-a7c0-6540d176006c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
