--- a/pset4/PSET-4 - Managing Data Excercise 2.ipynb
+++ b/pset4/PSET-4 - Managing Data Excercise 2.ipynb
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/14/m1yk_rm10nx5rd9pwp0n6qtc0000gn/T/ipykernel_1097/2370806246.py:1: DtypeWarning: Columns (7,8,13,14,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/14/m1yk_rm10nx5rd9pwp0n6qtc0000gn/T/ipykernel_1268/2370806246.py:1: DtypeWarning: Columns (7,8,13,14,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"nj_teachers_salaries_pset4.csv\")\n"
      ]
     }
@@ -1805,7 +1805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b0dd4a04",
    "metadata": {},
    "outputs": [],
@@ -1841,7 +1841,7 @@
     "FROM teachers_salaries_pset4\n",
     "ORDER BY RAND(7)\n",
     "LIMIT 777\n",
-    "INTO LOCAL OUTFILE '/opt/homebrew/sample.csv'\n",
+    "INTO LOCAL OUTFILE '/Users/alf/Documents/VS Code/pset4/sample.csv'\n",
     "FIELDS TERMINATED BY ','\n",
     "OPTIONALLY ENCLOSED BY '\"'\n",
     "LINES TERMINATED BY '\\\\n';\n",
