--- a/pset4/PSET-4 - Managing Data Excercise 2.ipynb
+++ b/pset4/PSET-4 - Managing Data Excercise 2.ipynb
@@ -1841,7 +1841,7 @@
     "FROM teachers_salaries_pset4\n",
     "ORDER BY RAND(7)\n",
     "LIMIT 777\n",
-    "INTO LOCAL OUTFILE '/Users/alf/Documents/VS Code/pset4/sample.csv'\n",
+    "INTO OUTFILE '/Users/alf/Documents/sample.csv'\n",
     "FIELDS TERMINATED BY ','\n",
     "OPTIONALLY ENCLOSED BY '\"'\n",
     "LINES TERMINATED BY '\\\\n';\n",
