--- a/pset4/PSET-4 - Managing Data Excercise 2.ipynb
+++ b/pset4/PSET-4 - Managing Data Excercise 2.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "id": "a8464d6c",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "id": "327c0e96",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/14/m1yk_rm10nx5rd9pwp0n6qtc0000gn/T/ipykernel_1268/2370806246.py:1: DtypeWarning: Columns (7,8,13,14,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/14/m1yk_rm10nx5rd9pwp0n6qtc0000gn/T/ipykernel_3901/2370806246.py:1: DtypeWarning: Columns (7,8,13,14,15) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"nj_teachers_salaries_pset4.csv\")\n"
      ]
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "id": "0cf108bd",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "id": "5171405b-8861-4e0e-a7d6-b8a6d6b362cb",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "id": "8b389199-e49c-4bf1-8c04-7638cf18aef4",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "id": "032eab69-ce70-490b-9655-4d3b3f7100db",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "id": "13a48ba9-1a68-4397-9003-9c5f20f1042f",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "id": "500d6894",
    "metadata": {},
    "outputs": [],
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "id": "32179431-d275-4c55-87fd-8c4617ab6a30",
    "metadata": {},
    "outputs": [
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "id": "75a36ec1",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "id": "c0e21809-3609-40a0-9178-481a5826024c",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "id": "5f8858c1",
    "metadata": {},
    "outputs": [],
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "id": "f2ee3ab4-4f36-42eb-a3d5-a440e28082cf",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "id": "08c11dbc-3ef5-4cfe-959e-b4236d5a37e1",
    "metadata": {},
    "outputs": [],
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 75,
    "id": "9e277b5b-f270-419c-b10c-b3fc92317c58",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 76,
    "id": "c312c0e9-dc91-4da4-a1b1-ae34f803e34b",
    "metadata": {},
    "outputs": [],
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 77,
    "id": "bad33d62",
    "metadata": {},
    "outputs": [
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 78,
    "id": "8c6c91e3",
    "metadata": {},
    "outputs": [],
@@ -1585,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 79,
    "id": "0aa0e7ac",
    "metadata": {},
    "outputs": [],
@@ -1603,7 +1603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 80,
    "id": "e3123aa5",
    "metadata": {},
    "outputs": [],
@@ -1635,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 81,
    "id": "a9c02aa0",
    "metadata": {},
    "outputs": [],
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 82,
    "id": "262fc1e9-46f9-46e4-a636-e9a726e1b0f3",
    "metadata": {},
    "outputs": [
@@ -1695,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 83,
    "id": "4c84b407",
    "metadata": {},
    "outputs": [
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 84,
    "id": "a9f8d503",
    "metadata": {},
    "outputs": [
@@ -1810,34 +1810,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mycursor.execute(\"USE nj_state_teachers_salaries\")\n",
+    "allow_local_outfile=True\n",
     "\n",
-    "random_sample = \"\"\"\n",
+    "\n",
+    "random_sample = f\"\"\"\n",
+    "USE nj_state_teachers_salaries;\n",
+    "\n",
     "SELECT \n",
-    "    'id',\n",
-    "    'first_name',\n",
-    "    'last_name',\n",
-    "    'primary_job',\n",
-    "    'experience_total',\n",
-    "    'experience_district',\n",
-    "    'experience_current_job',\n",
-    "    'salary',\n",
-    "    'days_worked',\n",
-    "    'teaching_route',\n",
-    "    'subcategory'\n",
+    "    'id' AS id,\n",
+    "    'last_name' AS last_name,\n",
+    "    'first_name' AS first_name,\n",
+    "    'county' AS county,\n",
+    "    'district' AS district,\n",
+    "    'school' AS school,\n",
+    "    'primary_job' AS primary_job,\n",
+    "    'fte' AS fte,\n",
+    "    'salary' AS salary,\n",
+    "    'certificate' AS certificate,\n",
+    "    'subcategory' AS subcategory,\n",
+    "    'teaching_route' AS teaching_route,\n",
+    "    'highly_qualified' AS highly_qualified,\n",
+    "    'experience_district' AS experience_district,\n",
+    "    'experience_nj' AS experience_nj,\n",
+    "    'experience_total' AS experience_total\n",
     "UNION ALL\n",
     "SELECT\n",
     "    id,\n",
-    "    first_name,\n",
-    "    last_name,\n",
-    "    primary_job,\n",
-    "    experience_total,\n",
-    "    experience_district,\n",
-    "    experience_current_job,\n",
-    "    salary,\n",
-    "    days_worked,\n",
-    "    teaching_route,\n",
-    "    subcategory\n",
+    "last_name,\n",
+    "first_name,\n",
+    "county,\n",
+    "district,\n",
+    "school,\n",
+    "primary_job,\n",
+    "fte,\n",
+    "salary,\n",
+    "certificate,\n",
+    "subcategory,\n",
+    "teaching_route,\n",
+    "highly_qualified,\n",
+    "experience_district,\n",
+    "experience_nj,\n",
+    "experience_total\n",
     "FROM teachers_salaries_pset4\n",
     "ORDER BY RAND(7)\n",
     "LIMIT 777\n",
@@ -1846,6 +1859,8 @@
     "OPTIONALLY ENCLOSED BY '\"'\n",
     "LINES TERMINATED BY '\\\\n';\n",
     "\"\"\"\n",
+    "mycursor.execute(random_sample, multi=True)\n",
+    "mydb.commit()\n",
     "\n",
     "with open(\"output.sql\", \"w\") as f:\n",
     "    f.write(random_sample)"
