--- a/pset5/PSET 5 Exploratory Data Analysis.ipynb
+++ b/pset5/PSET 5 Exploratory Data Analysis.ipynb
@@ -427,22 +427,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "61a1a8e5-9532-4624-a143-2ff579b99909",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_numeric_column(dfx, column_name):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4984e73b-cc46-4a35-80a6-2505f28f2e89",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#remove commas and convert to numeric\n",
+    "def clean_numeric_column(dfx, column_name):\n",
     "    dfx[column_name] = pd.to_numeric(dfx[column_name].astype(str).str.replace(',', ''), errors='coerce')\n",
     "\n",
     "    #drop rows with NaN\n",
@@ -456,11 +446,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "50664004-97f4-4f5e-b47b-b4c1d75cc875",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_cpu_cleaned = df_cpu.copy()\n",
+    "df_disk_cleaned = df_disk.copy()\n",
+    "df_memory_cleaned = df_memory.copy()\n",
+    "df_cpu_cleaned = clean_numeric_column(df_cpu_cleaned, 'threads')\n",
+    "df_disk_cleaned = clean_numeric_column(df_disk_cleaned, 'total_byte_per_second')\n",
+    "df_memory_cleaned = clean_numeric_column(df_memory_cleaned, 'working_set_kb')\n"
+   ]
   },
   {
    "cell_type": "code",
