--- a/pset5/PSET 5 Exploratory Data Analysis.ipynb
+++ b/pset5/PSET 5 Exploratory Data Analysis.ipynb
@@ -727,13 +727,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "32bafe3a",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code\n",
-    "\n"
+    "\n",
+    "# Aggregate CPU usage by process\n",
+    "cpu_aggregated = cpu_df.groupby('image').agg({'cpu': 'sum', 'average_cpu': 'mean'}).reset_index()\n",
+    "\n",
+    "# Aggregate Disk usage by process\n",
+    "disk_aggregated = disk_df.groupby('image').agg({'total_byte_per_second': 'sum'}).reset_index()\n",
+    "\n",
+    "# Aggregate Memory usage by process\n",
+    "memory_aggregated = memory_df.groupby('image').agg({'commit_kb': 'sum', 'working_set_kb': 'sum'}).reset_index()\n",
+    "\n",
+    "# Verify results by displaying summaries\n",
+    "cpu_aggregated.describe(), disk_aggregated.describe(), memory_aggregated.describe()"
    ]
   },
   {
@@ -802,13 +813,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "5ee2192e",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Your code\n",
-    "\n"
+    "\n",
+    "# Merge datasets on 'image' column using an outer join to ensure all processes are included\n",
+    "merged_df = cpu_aggregated.merge(disk_aggregated, on='image', how='outer').merge(memory_aggregated, on='image', how='outer')\n",
+    "\n",
+    "# Fill NaN values with zero (assuming missing values mean no resource usage recorded)\n",
+    "merged_df.fillna(0, inplace=True)\n",
+    "\n",
+    "# Verify merged dataset\n",
+    "merged_df.info(), merged_df.head()"
    ]
   },
   {
@@ -848,12 +867,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "35dffad5-3660-4eca-9d52-b35dd2722848",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your  code here"
+    "#your  code here\n",
+    "\n",
+    "# Determine high CPU and Memory usage thresholds dynamically\n",
+    "cpu_threshold = merged_df['cpu'].quantile(0.90)\n",
+    "memory_threshold = merged_df['working_set_kb'].quantile(0.90)\n",
+    "\n",
+    "# Filter processes that exceed the 90th percentile in CPU and Memory usage\n",
+    "high_cpu_usage = merged_df[merged_df['cpu'] > cpu_threshold]\n",
+    "high_memory_usage = merged_df[merged_df['working_set_kb'] > memory_threshold]\n",
+    "\n",
+    "# Identify processes that consume high CPU and Memory simultaneously\n",
+    "high_resource_usage = merged_df[\n",
+    "    (merged_df['cpu'] > cpu_threshold) & (merged_df['working_set_kb'] > memory_threshold)\n",
+    "]\n",
+    "\n",
+    "# Display the count of filtered results for validation\n",
+    "len(high_cpu_usage), len(high_memory_usage), len(high_resource_usage), high_resource_usage.head()\n"
    ]
   },
   {
