--- a/pset7/PSET7-ObjectOriented.ipynb
+++ b/pset7/PSET7-ObjectOriented.ipynb
@@ -254,7 +254,84 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your code here"
+    "class Project(Student):\n",
+    "    def __init__(self, student_id, major, university, project_id):\n",
+    "        super().__init__(student_id, major, university)\n",
+    "        self.project_id = project_id\n",
+    "        self.data_points = []\n",
+    "        self.__analysis_results = {}\n",
+    "        self.__active = True\n",
+    "\n",
+    "    def add_data(self, new_data):\n",
+    "            #add numerical data to the data_points list\n",
+    "            #arguments: new_data (int, float, or list): A number or list of numbers\n",
+    "            #handle incorrect data types: if the input is not numeric or a list of numerics\n",
+    "\n",
+    "        if isinstance(new_data, (int, float)):\n",
+    "            self.data_points.append(float(new_data))\n",
+    "\n",
+    "        elif isinstance(new_data, list):\n",
+    "            if all(isinstance(item, (int, float)) for item in new_data):\n",
+    "                self.data_points.extend([float(x) for x in new_data])\n",
+    "            else:\n",
+    "                raise TypeError(\"All elements in the list must be numeric.\")\n",
+    "\n",
+    "        else:\n",
+    "            raise TypeError(\"Input must be a number or a list of numbers.\")\n",
+    "    \n",
+    "    def set_active(self, status):\n",
+    "        #set the active status of the project\n",
+    "        #arguments: status (bool): True to activate, False to deactivate\n",
+    "        #handle incorrect data types: if status is not a boolean\n",
+    "    \n",
+    "        if not isinstance(status, bool):\n",
+    "            raise ValueError(\"Status must be a boolean.\")\n",
+    "        self.__active = status\n",
+    "\n",
+    "    def is_active(self):\n",
+    "        #check whether the project is currently active\n",
+    "        \n",
+    "        return self.__active\n",
+    "    \n",
+    "    def perform_analysis(self):\n",
+    "        #analyze the data_points to calculate mean, median, and variance \n",
+    "        #stores the result in __analysis_results\n",
+    "        #if data_points is empty print an error message\n",
+    "        \n",
+    "        try:\n",
+    "            n = len(self.data_points)\n",
+    "            if n == 0:\n",
+    "                raise ZeroDivisionError(\"No data points available for analysis.\")\n",
+    "\n",
+    "            # Mean\n",
+    "            total = sum(self.data_points)\n",
+    "            mean = total / n\n",
+    "\n",
+    "            # Median\n",
+    "            sorted_data = sorted(self.data_points)\n",
+    "            if n % 2 == 1:\n",
+    "                median = float(sorted_data[n // 2])\n",
+    "            else:\n",
+    "                mid1 = sorted_data[n // 2 - 1]\n",
+    "                mid2 = sorted_data[n // 2]\n",
+    "                median = (mid1 + mid2) / 2.0\n",
+    "\n",
+    "            # Sample Variance\n",
+    "            squared_diffs = [(x - mean) ** 2 for x in self.data_points]\n",
+    "            if n == 1:\n",
+    "                variance = 0.0  # sample variance undefined, assume 0\n",
+    "            else:\n",
+    "                variance = sum(squared_diffs) / (n - 1)\n",
+    "\n",
+    "            self.__analysis_results = {\n",
+    "                \"mean\": round(mean, 2),\n",
+    "                \"median\": round(median, 2),\n",
+    "                \"variance\": round(variance, 2)\n",
+    "            }\n",
+    "\n",
+    "        except ZeroDivisionError:\n",
+    "            print(\"Cannot perform analysis: No data points available.\")\n",
+    "\n"
    ]
   },
   {
@@ -310,7 +387,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your test case here"
+    "#Test that a Project object can be instantiated with valid input values\n",
+    "my_project2 = Project(101, \"Data Science\", \"University of Illinois\", 501)\n",
+    "print(\"Test Case 3 Passed: Project object created successfully.\")"
    ]
   },
   {
@@ -320,7 +399,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your test case here"
+    "#Test that numeric data can be added successfully\n",
+    "my_project2.add_data([10, 20, 30])\n",
+    "print(\"Test Case 4 Passed: Data added:\", my_project2.data_points)"
    ]
   },
   {
@@ -330,7 +411,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your test case here"
+    "#test that add_data raises an error when given non-numeric input\n",
+    "try:\n",
+    "    my_project2.add_data([\"bad\", 22])\n",
+    "    print(\"Test Case 5 Failed: No error raised.\")\n",
+    "except TypeError:\n",
+    "    print(\"Test Case 5 Passed: TypeError raised for invalid data.\")"
    ]
   },
   {
@@ -340,7 +426,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your test case here"
+    "#test that perform_analysis() works and stores results correctly\n",
+    "my_project2.perform_analysis()\n",
+    "print(\"Test Case 6 Passed: Analysis results:\", my_project2._Project__analysis_results)"
    ]
   },
   {
@@ -350,7 +438,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#your test case here"
+    "#test that perform_analysis() handles empty data\n",
+    "my_project3 = Project(2, \"Math\", \"University of Kansas\", 109)\n",
+    "my_project3.perform_analysis()  # Should print message\n",
+    "print(\"Test Case 7 Passed: No crash on empty data.\")"
    ]
   },
   {
